<resources>
    <string name="app_name">MedicVrahiApp</string>

    <string name="da">ДА</string>
    <string name="date_rojdenia">Дата рождения</string>
    <string name="dobro_pojalovat">Добро пожаловать</string>
    <string name="dostupnie_nomerki">Доступные номерки</string>
    <string name="familia">Фамилия</string>
    <string name="fio">Ф.И.О.</string>
    <string name="get_konsult">ПОЛУЧИТЬ КОНСУЛЬТАЦИЮ</string>
    <string name="gotovie">Готовые</string>
    <string name="history_poseheniy">История посещений</string>
    <string name="info_reg">На ваш номер телефона будет отправлен временный пароль для входа в личный кабинет</string>
    <string name="istoriya_poseheniy">История посещений, результаты анализов</string>
    <string name="jdem_vas">ЖДЁМ ВАС</string>
    <string name="k_kokomu_vrahu">Вы хотите попасть к конкретному врачу?</string>
    <string name="k_sojaleniu">К сожалению этот талон уже кто-то забронировал.</string>
    <string name="kak_obrahatsia">Как к вам обращаться?</string>
    <string name="koment">Коментарий</string>
    <string name="let">лет</string>
    <string name="lihn_kabinet">Личный кабинет</string>
    <string name="menu">Меню</string>
    <string name="mne_nuzen_vrah">Мне нужен врач</string>
    <string name="moi_analizi">Мои анализы</string>
    <string name="nahi_vrahi">Наши врачи</string>
    <string name="name">Имя</string>
    <string name="net">НЕТ</string>
    <string name="net_gotovix_analizov">У Вас нет готовых анализов</string>
    <string name="net_novix_analizov">У Вас нет новых анализов</string>
    <string name="net_planovox_poseheniy">У Вас нет плановых посещений</string>
    <string name="net_prediduh_poseheniy">У Вас нет предыдущих посещений</string>
    <string name="netakciy">В данный момент мы не проводим никаких акций</string>
    <string name="novi_email">Новая почта</string>
    <string name="novi_parol">Новый пароль</string>
    <string name="novi_parol_povtorno">Новый пароль повторно</string>
    <string name="novie">Новые</string>
    <string name="o_nahix_vrahax">В данном разделе вы можете узнать информацию о врачах нашей клиники</string>
    <string name="obraz_opit">Образование и опыт</string>
    <string name="ohibka_otziva">Ошибка связи</string>
    <string name="ohibka_zapisi">Ошибка записи</string>
    <string name="online_zapis_ne_vozmojna">К сожалению, запись к данному врачу онлайн невозможна. Оставьте свои контактные данные и мы свяжемся сВами, что бы обсудить дату и время приёма.</string>
    <string name="ostavit_otziv">ОСТАВИТЬ ОТЗЫВ</string>
    <string name="othestvo">Отчество</string>
    <string name="otpravit_otziv">ОТПРАВИТЬ ОТЗЫВ</string>
    <string name="otziv_o_vrahe">Отзыв о враче</string>
    <string name="otziv_otpravlen">Отзыв отправлен</string>
    <string name="parol">Пароль</string>
    <string name="planovoe">Плановые</string>
    <string name="podtverdit">ПОДТВЕРДИТЬ ЗАПИСЬ</string>
    <string name="poisk">Поиск по ФИО или специальности</string>
    <string name="poluh_konsult">Получить онлайн-консультацию</string>
    <string name="poluhit_cod">ПОЛУЧИТЬ КОД</string>
    <string name="posl_konsult">ПОСЛЕДНИЕ КОНСУЛЬТАЦИИ</string>
    <string name="prim_k_voprosu">В данном разделе вы можете получить консультации от врачей по интересующим Вас вопросам. \n\n Задайте вопросы напрямую специалисту и получите ответ кратчайшие сроки.\n\n Для получения новой консультации нажмите кнопку \"Получить консультацию\".\n\n Для продолжения диалога или получения ответа на ранее заданный вопрос нажмите кнопку \"Последние консультации\".</string>
    <string name="profil">Профиль</string>
    <string name="prohedhie">Прошедшие</string>
    <string name="proverit_cod">ПРОВЕРИТЬ КОД</string>
    <string name="registr">РЕГИСТРАЦИЯ</string>
    <string name="registrфешщт">ЗАРЕГСТРИРОВАТЬСЯ</string>
    <string name="save">СОХРАНИТЬ</string>
    <string name="search_menu_title">Search</string>
    <string name="skidki">Скидки, специальные предложения</string>
    <string name="skobki">_(___)___ __ __</string>
    <string name="smena_email">Смена адреса электронной почты</string>
    <string name="smena_parolia">Смена пароля</string>
    <string name="smenit_email">Сменить email</string>
    <string name="smenit_parol">Сменить пароль</string>
    <string name="staj_raboti">Стаж работы</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="stepen">Степень</string>
    <string name="telefon">Ваш номер телефона</string>
    <string name="telefon2">Телефон</string>
    <string name="title_dashboard">Da</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">No</string>
    <string name="u_kogo_konsult">У кого вы хотите получить консультацию?</string>
    <string name="v_rabote">В работе</string>
    <string name="v_rabote_net">У Вас нет анализов в работе</string>
    <string name="vah_priem">Ваш приём к врачу состоится</string>
    <string name="viberi_datu">Выберите дату и время приёма</string>
    <string name="vibiri_vraha">Выберите врача из представленных ниже, либо используйте поиск</string>
    <string name="viyti">Выйти из аккаунта</string>
    <string name="vizov_na_dom">Вызвать врача на дом</string>
    <string name="vizov_vraha">Вызов врача</string>
    <string name="vizvat_vraha">ВЫЗВАТЬ ВРАЧА</string>
    <string name="voiti">ВОЙТИ</string>
    <string name="vopros">Вопрос</string>
    <string name="vse_vrahi">Все врачи клиники</string>
    <string name="vvedite_dannie">Введите данные</string>
    <string name="vvedite_telefon_vah">Введите ваш номер телефона в международном формате.\n Например: +79207773388</string>
    <string name="vvod_sms_cod_podtverjdenie">Введите код подтверждения, присланный Вам в СМС</string>
    <string name="zadat_vopros">Задать вопрос</string>
    <string name="zapis">Запись</string>
    <string name="zapis_k">Запись к</string>
    <string name="zapis_k_vrahu">Записаться на приём к врачу</string>
    <string name="zapis_na_priem">Запись на приём</string>
    <string name="zapis_na_priem_knopka">ЗАПИСАТЬСЯ НА ПРИЁМ</string>
    <string name="zapisalis_udahno">Вызов принят</string>
    <string name="zapomnit">Запомнить меня</string>
    <string name="akcii">Акции</string>
    <string name="autoriz">Авторизация</string>
    <string name="bonus">Бонус</string>
    <string name="chat">Чат</string>
    <string name="talonhiki">Талончики</string>
    <string name="interval">Интервал в минутах</string>
    <string name="skolko_dobavit">Сколько добавить толонов</string>
    <string name="naholo_priema">Время начала приема</string>
    <string name="dobavit">ДОБАВИТЬ</string>
    <string name="vibor_foto">Выбор фото</string>
    <string name="sdelat_foto">Сделать фото</string>
    <string name="vibrat_file">Выбрать файл</string>
    <string name="Staj">Стаж</string>
    <string name="obrazovanie">Образование</string>
    <string name="redactirovat">Редактировать</string>
</resources>
