<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/conBottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/fon_bottom"
    tools:context=".model.InitOsnovnActivityBottomButton"

    app:layout_constraintBottom_toBottomOf="parent">

    <ImageButton
        android:id="@+id/ibChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/fon_bottom"
        android:backgroundTintMode="src_over"
        android:foregroundTint="@color/tertiary_text_light"

        android:onClick="chatButtonClick"
        app:layout_constraintEnd_toStartOf="@+id/ibZapis"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_format_align_left_black_40dp"
        tools:backgroundTintMode="src_atop" />

    <ImageButton
        android:id="@+id/ibZapis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/fon_bottom"
        android:onClick="talonhikiSozdatClikck"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/ibVopros"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ibChat"
        app:srcCompat="@drawable/ic_content_paste_black_40dp" />

    <ImageButton
        android:id="@+id/ibVopros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/fon_bottom"
        android:onClick="voprosButton"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/ibAkcii"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ibZapis"
        app:srcCompat="@drawable/ic_forum_black_24dp" />

    <ImageButton
        android:id="@+id/ibAkcii"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/fon_bottom"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/ibProfil"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ibVopros"
        app:srcCompat="@drawable/ic_turned_in_black_40dp" />

    <ImageButton
        android:id="@+id/ibProfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/fon_bottom"
        android:onClick="profilPage"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ibAkcii"
        app:srcCompat="@drawable/ic_person_black_40dp" />

    <TextView
        android:id="@+id/tvChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/fon_bottom"
        android:text="@string/chat"
        android:textSize="@dimen/shrift_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ibChat"
        app:layout_constraintStart_toStartOf="@+id/ibChat" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/fon_bottom"
        android:text="@string/talonhiki"
        android:textSize="@dimen/shrift_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ibZapis"
        app:layout_constraintStart_toStartOf="@+id/ibZapis" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/fon_bottom"
        android:text="@string/vopros"
        android:textSize="@dimen/shrift_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ibVopros"
        app:layout_constraintStart_toStartOf="@+id/ibVopros" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/fon_bottom"
        android:text="@string/akcii"
        android:textSize="@dimen/shrift_1"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ibAkcii"
        app:layout_constraintStart_toStartOf="@+id/ibAkcii" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/fon_bottom"
        android:text="@string/profil"
        android:textSize="@dimen/shrift_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ibProfil"
        app:layout_constraintStart_toStartOf="@+id/ibProfil" />
</android.support.constraint.ConstraintLayout>