<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".f_profil.RegistrationTelefonActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/comScr"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteY="263dp">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/conFirst"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAutoriz">

                <TextView
                    android:id="@+id/textView2Phone2"
                    style="@style/text_oglavlenie_na_primary_fone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/vvedite_telefon_vah"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/etTelefonToSendCode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:hint="Phone No."
                    android:inputType="phone"
                    android:padding="10dp"
                    android:text="+79203227775"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2Phone2" />

                <Button
                    android:id="@+id/btPoluhitKod"
                    style="@style/knopki_orang"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/etTelefonToSendCode"
                    android:layout_alignLeft="@+id/etTelefonToSendCode"
                    android:layout_alignRight="@+id/etTelefonToSendCode"
                    android:layout_alignStart="@+id/etTelefonToSendCode"
                    android:layout_below="@+id/etTelefonToSendCode"
                    android:layout_marginTop="16dp"
                    android:onClick="poluhitCod"
                    android:text="@string/poluhit_cod"
                    app:layout_constraintEnd_toEndOf="@+id/etTelefonToSendCode"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/etTelefonToSendCode"
                    app:layout_constraintTop_toBottomOf="@+id/etTelefonToSendCode" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/conSecond"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/tvAutoriz"
                >

                <TextView
                    android:id="@+id/textViewVerified2"
                    style="@style/text_oglavlenie_na_primary_fone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/vvod_sms_cod_podtverjdenie"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/etTelefonProveritCod"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:inputType="number"
                    android:padding="10dp"
                    android:text="123456"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewVerified2" />

                <Button
                    android:id="@+id/btOtpravitCodNaProverku"
                    style="@style/knopki_orang"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:onClick="proveritCod"
                    android:text="@string/proverit_cod"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="@+id/etTelefonProveritCod"
                    app:layout_constraintStart_toStartOf="@+id/etTelefonProveritCod"
                    app:layout_constraintTop_toBottomOf="@+id/etTelefonProveritCod" />

            </android.support.constraint.ConstraintLayout>

            <TextView
                android:id="@+id/tvAutoriz"
                style="@style/text_oglavlenie_orange_na_belom_fone"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_weight="1"
                android:text="@string/autoriz"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent" />

        </android.support.constraint.ConstraintLayout>


    </ScrollView>

</android.support.constraint.ConstraintLayout>